update IconViewer for new AntuIcons