@@ -1,10 +1,9 @@
 package org.teamapps.demolessons.p2_application.l05_iconviewer;
 
-import com.google.common.io.Files;
+import org.teamapps.common.format.Color;
 import org.teamapps.demolessons.DemoLesson;
 import org.teamapps.icon.antu.AntuIcon;
-import org.teamapps.icon.antu.AntuIconProvider;
-import org.teamapps.icons.api.IconStyle;
+import org.teamapps.icon.antu.AntuIconStyle;
 import org.teamapps.server.jetty.embedded.TeamAppsJettyEmbeddedServer;
 import org.teamapps.ux.component.Component;
 import org.teamapps.ux.component.field.TemplateField;
@@ -15,23 +14,28 @@ import org.teamapps.ux.component.flexcontainer.VerticalLayout;
 import org.teamapps.ux.component.form.ResponsiveForm;
 import org.teamapps.ux.component.form.ResponsiveFormLayout;
 import org.teamapps.ux.component.infiniteitemview.InfiniteItemView;
+import org.teamapps.ux.component.infiniteitemview.InfiniteItemView2;
+import org.teamapps.ux.component.infiniteitemview.ListInfiniteItemViewModel;
 import org.teamapps.ux.component.notification.Notification;
 import org.teamapps.ux.component.notification.NotificationPosition;
 import org.teamapps.ux.component.panel.Panel;
+import org.teamapps.ux.component.rootpanel.RootPanel;
 import org.teamapps.ux.component.template.BaseTemplate;
 import org.teamapps.ux.component.template.BaseTemplateRecord;
 import org.teamapps.ux.component.template.Template;
 import org.teamapps.ux.session.SessionContext;
-import org.teamapps.webcontroller.SimpleWebController;
+import org.teamapps.webcontroller.WebController;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class IconViewerDemo implements DemoLesson {
 
 	private SessionContext sessionContext;
 	private Template itemTemplate = BaseTemplate.ITEM_VIEW_ITEM;
-	private CategorizedIconsModel model;
+	private AntuIconStyle iconStyle;
+	private final ListInfiniteItemViewModel<AntuIcon> iconViewModel = new ListInfiniteItemViewModel<>(AntuIcon.getIcons());
 
 	public IconViewerDemo(SessionContext sessionContext) {
 		this.sessionContext = sessionContext;
@@ -40,64 +44,15 @@ public class IconViewerDemo implements DemoLesson {
 	@Override
 	public Component getRootComponent() {
 		Panel panel = new Panel();
-//		InfiniteItemView<StoreItem> itemView = new InfiniteItemView<>();
-//        ListInfiniteItemViewModel<StoreItem> model = new ListInfiniteItemViewModel<>();
-//        model.addRecord(new StoreItem("My first book", "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0d/BLW_Manuscript_Book_of_Hours%2C_about_1480-90.jpg/640px-BLW_Manuscript_Book_of_Hours%2C_about_1480-90.jpg", 27.5, LocalDate.of(1990, 2, 23)));
-//        model.addRecord(new StoreItem("Coconut", "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f2/Coconut_on_white_background.jpg/640px-Coconut_on_white_background.jpg", 2.95, LocalDate.now().minusDays(2)));
-//        itemView.setModel(model);
-//        itemView.setItemWidth(0);
-//        itemView.setRowHeight(100);
-//
-//        itemView.setItemPropertyExtractor(new BeanPropertyExtractor<StoreItem>().addProperty("isNew", storeItem -> {
-//			return LocalDate.now().minusDays(30).compareTo(storeItem.getReleaseDate()) < 0;
-//		}));
-
 		Component iconFinder = createIconFinder();
 		panel.setContent(iconFinder);
         panel.setTitle("Icon Viewer");
-        panel.setIcon(AntuIcon.APPS.GCSTAR_48);
+        panel.setIcon(AntuIcon.APP_GCSTAR_48);
 		return panel;
 	}
 
-	private CategorizedIconsModel createModel() {
-		return  new CategorizedIconsModel(Arrays.asList(AntuIconCategory.values()));
-	}
-
-	public InfiniteItemView<CategorizedIcon> createIconViewComponent() {
-		InfiniteItemView<CategorizedIcon> itemView = new InfiniteItemView<>(this.itemTemplate, 100, 100);
-		itemView.setItemPropertyExtractor((icon, prop) -> {
-			if (prop.equals("icon")) {
-				return icon.getIcon();
-			} else if (prop.equals("caption")) {
-				return icon.getName();
-			} else if (prop.equals("description")) {
-				return icon.getCategory();
-			} else {
-				return null;
-			}
-		});
-		model = createModel();
-		itemView.setModel(model);
-
-		// Print Icon ID in Notification
-
-		itemView.onItemClicked.addListener(iconItemClickedEventData -> {
-			String iconId = iconItemClickedEventData.getRecord().toString();
-
-			// Custom Notification with VERY LARGE ICON
-			TemplateField<BaseTemplateRecord<Void>> templateField = new TemplateField(BaseTemplate.LIST_ITEM_EXTRA_VERY_LARGE_ICON_TWO_LINES);
-			templateField.setValue(new BaseTemplateRecord(iconItemClickedEventData.getRecord().getIcon(), iconId, ""));
-			Notification iconNotification = new Notification();
-			iconNotification.setContent(templateField);
-			iconNotification.setShowProgressBar(false);
-			iconNotification.setDisplayTimeInMillis(5000);
-			sessionContext.showNotification(iconNotification, NotificationPosition.TOP_RIGHT);
-		});
-		return itemView;
-	}
-
 	protected Component createIconFinder() {
-		InfiniteItemView<CategorizedIcon> iconViewComponent = createIconViewComponent();
+		Panel iconViewComponent = createIconView2Component();
 
 		VerticalLayout verticalLayout = new VerticalLayout();
 		// New Component: ResponsiveForm
@@ -107,73 +62,96 @@ public class IconViewerDemo implements DemoLesson {
 		ResponsiveFormLayout layout = responsiveForm.addResponsiveFormLayout(400);
 
 		// Icon Search
-		layout.addSection(AntuIcon.ACTION.VIEW_FILTER_24,"Filter Icons");
+		layout.addSection(AntuIcon.ACTION_VIEW_FILTER_24,"Filter Icons");
 		TextField searchField = new TextField();
-		layout.addLabelAndField(AntuIcon.ACTION.SEARCH_24, "Icon Name", searchField);
+		layout.addLabelAndField(AntuIcon.ACTION_SEARCH_24, "Icon Name", searchField);
 		searchField.setEmptyText("Search...");
-		searchField.onTextInput.addListener(s -> model.setFilterString(s));
+		searchField.onTextInput.addListener(s ->iconViewModel.setRecords(AntuIcon.getIcons().stream().filter(icon -> s == null || icon.getIconID().contains(s.toUpperCase())).collect(Collectors.toList())));
 		verticalLayout.addComponent(searchField);
 
-        // Category Filter
-		TagComboBox<AntuIconCategory> categoryComboBox = new TagComboBox<>(Arrays.asList(AntuIconCategory.values()));
-		categoryComboBox.onValueChanged.addListener(iconCategories -> {
-			if (iconCategories.isEmpty()) {
-				model.setIconCategories(Arrays.asList(AntuIconCategory.values()));
-			} else {
-				model.setIconCategories(iconCategories);
-			}
-		});
-		categoryComboBox.setTemplate(BaseTemplate.LIST_ITEM_MEDIUM_ICON_SINGLE_LINE);
-		categoryComboBox.setShowClearButton(true);
-		categoryComboBox.setPropertyExtractor((iconCategory, propertyName) -> {
-			switch (propertyName) {
-				case BaseTemplate.PROPERTY_ICON:
-					return iconCategory.getCategoryIcon();
-				case BaseTemplate.PROPERTY_CAPTION:
-					return iconCategory.getCategoryName();
-			}
-			return null;
-		});
-		layout.addLabelAndField(AntuIcon.ACTION.VIEW_CATEGORIES_24, "Icon Category", categoryComboBox);
-
 		// Style Selector
-		List<IconStyle> iconStyleList = Arrays.asList(AntuIconProvider.DARK, AntuIconProvider.STANDARD);
-		ComboBox<IconStyle> styleSelector = new ComboBox<>(iconStyleList);
+		ComboBox<AntuIconStyle> styleSelector = ComboBox.createForList(List.of(AntuIconStyle.LIGHT, AntuIconStyle.DARK));
 		styleSelector.setTemplate(BaseTemplate.LIST_ITEM_MEDIUM_ICON_SINGLE_LINE);
 		styleSelector.setPropertyExtractor((style, propertyName) -> {
 				switch (propertyName) {
 					case BaseTemplate.PROPERTY_ICON:
-						return AntuIcon.ACTION.DRAW_BRUSH_24;
+						return AntuIcon.ACTION_DRAW_BRUSH_24;
 					case BaseTemplate.PROPERTY_CAPTION:
-						return style.getStyleId();
+						if (style.equals(AntuIconStyle.DARK)){
+							return "DARK";
+						} else {
+							return "LIGHT";
+						}
 				}
 				return null;
 		});
-		styleSelector.setRecordToStringFunction(style -> style.getStyleId());
+		styleSelector.setRecordToStringFunction(style -> style.getFolder());
 		styleSelector.setShowClearButton(true);
 		styleSelector.onValueChanged.addListener(style -> {
-
-			model.setIconStyle(style);
-			if (style.getStyleId().equals("AntuDark")) {
+			iconStyle = style;
+			iconViewModel.onAllDataChanged.fire();
+			// model.setIconStyle(style);
+			if (style.equals(AntuIconStyle.DARK)) {
+				iconViewComponent.getContent().setCssStyle("background-color", "#777");
 				iconViewComponent.setCssStyle("background-color", "#777");
 			} else {
+				iconViewComponent.getContent().setCssStyle("background-color", "#777");
 				iconViewComponent.setCssStyle("background-color", "inherit");
 			}
 		});
-		layout.addLabelAndField(AntuIcon.ACTION.DRAW_BRUSH_24, "Icon Style", styleSelector);
+		layout.addLabelAndField(AntuIcon.ACTION_DRAW_BRUSH_24, "Icon Style", styleSelector);
 		verticalLayout.addComponentFillRemaining(iconViewComponent);
 		return verticalLayout;
 	}
 
-	public static void main(String[] args) throws Exception {
-		SimpleWebController controller = new SimpleWebController(sessionContext -> {
-			IconViewerDemo iconViewerDemo = new IconViewerDemo(sessionContext);
-			iconViewerDemo.handleDemoSelected();
-			return iconViewerDemo.getRootComponent();
+	public Panel createIconView2Component() {
+		InfiniteItemView2<AntuIcon> iconView = new InfiniteItemView2<>();
+		iconView.setItemTemplate(BaseTemplate.LIST_ITEM_LARGE_ICON_SINGLE_LINE);
+		iconView.setItemHeight(50);
+		iconView.setItemWidth(300);
+		iconView.setItemPropertyExtractor((antuIcon, propertyName) -> switch (propertyName) {
+			case BaseTemplate.PROPERTY_ICON -> antuIcon.withStyle(iconStyle);
+			case BaseTemplate.PROPERTY_CAPTION -> antuIcon.getIconID();
+			default -> null;
 		});
-		controller.addAdditionalIconProvider(new AntuIconProvider());
+		AntuIconStyle iconStyle = AntuIconStyle.LIGHT;
+		iconView.setModel(iconViewModel);
+		Panel panel = new Panel(null, "Icons");
+		panel.setContent(iconView);
+		panel.setBodyBackgroundColor(Color.WHITE.withAlpha(0.96f));
+		TextField searchField = new TextField();
+		searchField.onTextInput.addListener(s -> iconViewModel.setRecords(AntuIcon.getIcons().stream().filter(icon -> s == null || icon.getIconID().contains(s.toUpperCase())).collect(Collectors.toList())));
+		panel.setRightHeaderField(searchField);
+		iconView.onItemClicked.addListener(iconItemClickedEventData -> {
+			String iconId = iconItemClickedEventData.getRecord().toString();
 
-		new TeamAppsJettyEmbeddedServer(controller, Files.createTempDir()).start();
+			// Custom Notification with VERY LARGE ICON
+			TemplateField<BaseTemplateRecord<Void>> templateField = new TemplateField<>(BaseTemplate.LIST_ITEM_EXTRA_VERY_LARGE_ICON_TWO_LINES);
+			templateField.setValue(new BaseTemplateRecord<>(iconItemClickedEventData.getRecord(), iconItemClickedEventData.getRecord().getIconID(), iconItemClickedEventData.getRecord().getIconPath()));
+			Notification iconNotification = new Notification();
+			iconNotification.setContent(templateField);
+			iconNotification.setShowProgressBar(false);
+			iconNotification.setDisplayTimeInMillis(5000);
+			sessionContext.showNotification(iconNotification, NotificationPosition.TOP_RIGHT);
+		});
+		return panel;
+	}
+
+	// main method to launch the Demo standalone
+	public static void main(String[] args) throws Exception {
+		WebController controller = sessionContext -> {
+			RootPanel rootPanel = new RootPanel();
+			sessionContext.addRootPanel(null, rootPanel);
+
+			// create new instance of the Demo Class
+			DemoLesson demo = new IconViewerDemo(sessionContext);
+
+			// call the method defined in the DemoLesson Interface
+			demo.handleDemoSelected();
+
+			rootPanel.setContent(demo.getRootComponent());
+		};
+		new TeamAppsJettyEmbeddedServer(controller).start();
 	}
 
 }
